# qml_display

./: CMakeLists.txt  Main.qml  README.md  main.cpp
app/Inc/: Controller.h  DataBaseData.h  DisplayApp.h  GaussianRNG.h  HumiditySensor.h  IDataBaseHandler.h  IObserver.h  ISensor.h  ISubject.h  NaiveDataBaseHandler.h  Sensor.h  SensorTextObject.h  SocketClient.h  Subject.h  TemperatureSensor.h  UIController.h
app/Src/: CMakeLists.txt  Controller.cpp  DisplayApp.cpp  GaussianRNG.cpp  HumiditySensor.cpp  ISensor.cpp  Main.qml  NaiveDataBaseHandler.cpp  Sensor.cpp  SensorTextObject.cpp  SocketClient.cpp  Subject.cpp  TemperatureSensor.cpp  main.cpp
doc/: qml_display.drawio
